@@ -31,6 +31,7 @@ endif::[]
 * Fix shaded classloader package definition - {pull}2566[#2566]
 * Fix logging initialization with Security Manager - {pull}2568[#2568]
 * normalize empty `transaction.type` and `span.type` - {pull}2525[#2525]
+* Allowing square brackets within the <<config-capture-jmx-metrics>> config value - {pull}2547[#2547]
 
 
 [[release-notes-1.x]]
